--- a/index.html
+++ b/index.html
@@ -6,116 +6,63 @@
   <title>Hardeep Singh Portfolio</title>
 
   <!-- ✅ Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
 
   <!-- ✅ Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
 
-  <!-- ✅ Custom CSS -->
   <link rel="stylesheet" href="style.css" />
-
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      scroll-behavior: smooth;
-      background-color: #f8f9fa;
-    }
-
-    header img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    header {
-      background: #0d6efd;
-      color: white;
-      text-align: center;
-      padding: 50px 20px;
-    }
-
-    nav {
-      background: #212529;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      color: #ffc107;
-    }
-
-    section {
-      padding: 60px 20px;
-    }
-
-    .skills-list li {
-      list-style: none;
-      padding: 10px 0;
-      font-size: 18px;
-    }
-
-    .skills-list i {
-      color: #0d6efd;
-      margin-right: 10px;
-    }
-
-    footer {
-      background: #212529;
-      color: white;
-      text-align: center;
-      padding: 15px;
-    }
-
-    @media (max-width: 768px) {
-      header img {
-        width: 120px;
-        height: 120px;
-      }
-    }
-  </style>
 </head>
+<body class="bg-light">
 
-<body>
+  <!-- ===== HEADER ===== -->
+  <header class="text-center py-4 container">
+    <h1 class="fw-bold">Hardeep Singh</h1>
+    <div class="profile-wrapper my-3">
+      <img src="Deep.jpg" alt="Profile Photo" class="img-fluid rounded-circle" style="width:150px; height:150px; object-fit:cover;">
+      <br>
+      <a
+        class="btn btn-primary mt-3"
+        href="https://drive.google.com/file/d/1IT3OK3N-wENj0zbyslNWYMe2H4U1KxGr/view?usp=drive_link"
+        target="_blank"
+      >
+        📄 View Full Resume
+      </a>
+    </div>
 
-  <!-- ✅ Header Section -->
-  <header class="text-center">
-    <div class="container">
-      <h1 class="fw-bold">Hardeep Singh</h1>
-      <div class="profile-wrapper my-3">
-        <img src="Deep.jpg" alt="Profile Photo" class="img-fluid mb-3">
-        <br>
-        <a class="btn btn-warning" href="https://drive.google.com/file/d/1IT3OK3N-wENj0zbyslNWYMe2H4U1KxGr/view?usp=drive_link" target="_blank">
-          📄 View Full Resume
-        </a>
-      </div>
-      <p class="lead mt-3">
-        BCA final-year student specializing in web development and cloud technologies. Passionate about creating responsive, user-focused digital experiences using modern tools like ASP.NET, Salesforce, and JavaScript.
-      </p>
-      <a class="btn btn-light mt-3" href="#contact">Let's Connect</a>
-      <div class="social-icons mt-4">
-        <a href="https://www.linkedin.com/in/hardeep-singh-5ba483263/" target="_blank" class="text-white me-3"><i class="fab fa-linkedin fa-lg"></i></a>
-        <a href="mailto:ittzdeep231@gmail.com" class="text-white me-3"><i class="fas fa-envelope fa-lg"></i></a>
-        <a href="tel:+919711374840" class="text-white"><i class="fas fa-phone fa-lg"></i></a>
-      </div>
+    <p class="lead mx-auto" style="max-width: 800px;">
+      BCA final-year student specializing in web development and cloud technologies. Passionate about creating responsive, user-focused digital experiences using modern tools like ASP.NET, Salesforce, and JavaScript.
+    </p>
+
+    <a href="#contact" class="btn btn-outline-dark mt-2">Let's Connect</a>
+
+    <div class="social-icons mt-3">
+      <a href="https://www.linkedin.com/in/hardeep-singh-5ba483263/" target="_blank" class="mx-2 fs-4"><i class="fab fa-linkedin"></i></a>
+      <a href="mailto:ittzdeep231@gmail.com" class="mx-2 fs-4"><i class="fas fa-envelope"></i></a>
+      <a href="tel:+919711374840" class="mx-2 fs-4"><i class="fas fa-phone"></i></a>
     </div>
   </header>
 
-  <!-- ✅ Navbar -->
+  <!-- ===== NAVBAR ===== -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Portfolio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <a class="navbar-brand" href="#">Portfolio</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav text-center">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
@@ -126,108 +73,90 @@
     </div>
   </nav>
 
-  <!-- ✅ About Section -->
-  <section id="about" class="bg-white text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-4">About Me</h2>
-      <p class="lead">
-        Final-year BCA student at Jagannath Community College, Delhi, with strong hands-on experience in both front-end and back-end web development.
-        Proficient in HTML5, CSS3, JavaScript, ASP.NET, and C#, with a passion for building clean, responsive, and scalable web applications.
-      </p>
-      <p>
-        Skilled in SQL Server, MySQL, Salesforce, and Heroku. Adept at UI/UX design principles, accessibility standards, and mobile-first development.
-      </p>
-    </div>
+  <!-- ===== ABOUT ===== -->
+  <section id="about" class="container py-5 text-center">
+    <h2 class="mb-3">About Me</h2>
+    <p class="mx-auto" style="max-width: 900px;">
+      Final-year BCA student at Jagannath Community College, Delhi, with strong hands-on experience in both front-end and back-end web development. Proficient in HTML5, CSS3, JavaScript, ASP.NET, and C#, with a passion for building clean, responsive, and scalable web applications. Skilled in working with relational databases such as SQL Server and MySQL, and adept at integrating cloud platforms like Salesforce and Heroku. Demonstrates a strong understanding of UI/UX design principles, accessibility standards, and mobile-first development. Continuously engaged in learning emerging technologies, contributing to real-world projects, and collaborating with peers to deliver impactful digital solutions.
+    </p>
   </section>
 
-  <!-- ✅ Skills Section -->
-  <section id="skills" class="bg-light text-center">
+  <!-- ===== SKILLS ===== -->
+  <section id="skills" class="py-5 bg-white text-center">
     <div class="container">
-      <h2 class="fw-bold mb-4">Skills Overview</h2>
+      <h2 class="mb-4">Skills Overview</h2>
       <div class="row justify-content-center">
-        <div class="col-md-4 col-6"><i class="fab fa-html5 fa-2x text-primary"></i><p>HTML5 / CSS3 / JavaScript</p></div>
-        <div class="col-md-4 col-6"><i class="fas fa-code fa-2x text-primary"></i><p>ASP.NET / C#</p></div>
-        <div class="col-md-4 col-6"><i class="fas fa-cloud fa-2x text-primary"></i><p>Cloud Computing</p></div>
-        <div class="col-md-4 col-6"><i class="fas fa-sitemap fa-2x text-primary"></i><p>Salesforce / Heroku</p></div>
-        <div class="col-md-4 col-6"><i class="fas fa-database fa-2x text-primary"></i><p>SQL Server / MySQL</p></div>
-        <div class="col-md-4 col-6"><i class="fab fa-git-alt fa-2x text-primary"></i><p>Git & Version Control</p></div>
+        <div class="col-12 col-sm-6 col-md-4 mb-3"><i class="fab fa-html5 fs-3 text-danger"></i> HTML5 / CSS3 / JavaScript</div>
+        <div class="col-12 col-sm-6 col-md-4 mb-3"><i class="fas fa-code fs-3 text-primary"></i> ASP.NET / C#</div>
+        <div class="col-12 col-sm-6 col-md-4 mb-3"><i class="fas fa-cloud fs-3 text-info"></i> Cloud Computing</div>
+        <div class="col-12 col-sm-6 col-md-4 mb-3"><i class="fas fa-sitemap fs-3 text-success"></i> Salesforce / Heroku</div>
+        <div class="col-12 col-sm-6 col-md-4 mb-3"><i class="fas fa-database fs-3 text-warning"></i> SQL Server / MySQL</div>
+        <div class="col-12 col-sm-6 col-md-4 mb-3"><i class="fab fa-git-alt fs-3 text-danger"></i> Git & Version Control</div>
       </div>
     </div>
   </section>
 
-  <!-- ✅ Projects Section -->
-  <section id="projects" class="bg-white text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-4">Projects</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card shadow h-100">
-            <div class="card-body">
-              <h5 class="card-title">Employee Management System</h5>
-              <p><strong>Tech:</strong> ASP.NET, SQL Server</p>
-              <p>Web app for managing employee data with CRUD features.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow h-100">
-            <div class="card-body">
-              <h5 class="card-title">Garment Management System</h5>
-              <p><strong>Tech:</strong> C++</p>
-              <p>Console app for inventory and billing using file handling.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow h-100">
-            <div class="card-body">
-              <h5 class="card-title">Salesforce Automation App</h5>
-              <p><strong>Tech:</strong> Salesforce, Heroku</p>
-              <p>Created an app with workflows and deployed it using Heroku.</p>
-            </div>
+  <!-- ===== PROJECTS ===== -->
+  <section id="projects" class="container py-5">
+    <h2 class="text-center mb-4">Projects</h2>
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h3 class="card-title">Employee Management System</h3>
+            <p><strong>Tech:</strong> ASP.NET, SQL Server</p>
+            <p>Web app for managing employee data with CRUD features.</p>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- ✅ Experience Section -->
-  <section id="experience" class="bg-light text-center">
-    <div class="container">
-      <h2 class="fw-bold mb-4">Experience & Certifications</h2>
-      <div class="row justify-content-center">
-        <div class="col-md-8">
-          <div class="mb-3">
-            <h5>Intern – CodSoft</h5>
-            <p>May – June 2025 | HTML, CSS, JavaScript projects</p>
+      <div class="col-md-4 mb-3">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h3 class="card-title">Garment Management System</h3>
+            <p><strong>Tech:</strong> C++</p>
+            <p>Console app for inventory and billing using file handling.</p>
           </div>
-          <div class="mb-3">
-            <h5><a href="https://drive.google.com/file/d/1uROfKJaWi4nAnUiKysJrPFsiMG_810AL/view" target="_blank">NPTEL – Cloud Computing (IIT Kharagpur)</a></h5>
-          </div>
-          <div>
-            <h5><a href="http://drive.google.com/file/d/19RN6nkTqTrSTed5KDbLSySQCQxBxc8y2/view" target="_blank">NPTEL – Joy of Computing using Python (IIT Ropar)</a></h5>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h3 class="card-title">Salesforce Automation App</h3>
+            <p><strong>Tech:</strong> Salesforce, Heroku</p>
+            <p>Created an app with workflows and deployed it using Heroku.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- ✅ Contact Section -->
-  <section id="contact" class="bg-dark text-white text-center">
+  <!-- ===== EXPERIENCE ===== -->
+  <section id="experience" class="py-5 bg-white text-center">
     <div class="container">
-      <h2 class="fw-bold mb-4">Contact Me</h2>
-      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:ittzdeep231@gmail.com" class="text-white">ittzdeep231@gmail.com</a></p>
-      <p><i class="fas fa-phone"></i> Phone: <a href="tel:+919711374840" class="text-white">9711374840</a></p>
-      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/hardeep-singh-5ba483263/" target="_blank" class="text-white">linkedin.com/in/hardeep-singh</a></p>
+      <h2>Experience & Certifications</h2>
+      <div class="mt-4">
+        <h5>Intern – CodSoft</h5>
+        <p>May – June 2025 | HTML, CSS, JavaScript projects</p>
+      </div>
+      <div class="mt-3">
+        <a href="https://drive.google.com/file/d/1uROfKJaWi4nAnUiKysJrPFsiMG_810AL/view" target="_blank">NPTEL – Cloud Computing (IIT Kharagpur)</a>
+      </div>
+      <div class="mt-3">
+        <a href="http://drive.google.com/file/d/19RN6nkTqTrSTed5KDbLSySQCQxBxc8y2/view" target="_blank">NPTEL – Joy of Computing using Python (IIT Ropar)</a>
+      </div>
     </div>
   </section>
 
-  <footer>
-    <p class="mb-0">&copy; 2025 Hardeep Singh. All Rights Reserved.</p>
-  </footer>
+  <!-- ===== CONTACT ===== -->
+  <section id="contact" class="container py-5 text-center">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:ittzdeep231@gmail.com">ittzdeep231@gmail.com</a></p>
+    <p>Phone: <a href="tel:+919711374840">9711374840</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/hardeep-singh-5ba483263/" target="_blank">linkedin.com/in/hardeep-singh</a></p>
+  </section>
 
   <!-- ✅ Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
