--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
   <!-- ===== ABOUT ===== -->
   <section id="about" class="container py-5 text-center">
-    <h2 class="mb-3">About Me</h2>
-    <p class="mx-auto" style="max-width: 900px;">
-      Final-year BCA student at Jagannath Community College, Delhi, with strong hands-on experience in both front-end and back-end web development. Proficient in HTML5, CSS3, JavaScript, ASP.NET, and C#, with a passion for building clean, responsive, and scalable web applications. Skilled in working with relational databases such as SQL Server and MySQL, and adept at integrating cloud platforms like Salesforce and Heroku. Demonstrates a strong understanding of UI/UX design principles, accessibility standards, and mobile-first development. Continuously engaged in learning emerging technologies, contributing to real-world projects, and collaborating with peers to deliver impactful digital solutions.
-    </p>
-  </section>
+  <h2 class="mb-3">About Me</h2>
+  <p class="mx-auto text-dark" style="max-width: 900px;">
+    Final-year BCA student at Jagannath Community College, Delhi, with strong hands-on experience in both front-end and back-end web development. Proficient in HTML5, CSS3, JavaScript, ASP.NET, and C#, with a passion for building clean, responsive, and scalable web applications. Skilled in working with relational databases such as SQL Server and MySQL, and adept at integrating cloud platforms like Salesforce and Heroku. Demonstrates a strong understanding of UI/UX design principles, accessibility standards, and mobile-first development. Continuously engaged in learning emerging technologies, contributing to real-world projects, and collaborating with peers to deliver impactful digital solutions.
+  </p>
+</section>
 
   <!-- ===== SKILLS ===== -->
   <section id="skills" class="py-5 bg-white text-center">
@@ -160,3 +160,4 @@
 
 </body>
 </html>
+
