--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </section>
 
   <!-- ===== SKILLS ===== -->
-  <section id="skills" class="py-5 bg-white text-center">
+  <section id="skills" class="py-5 bg-black text-center">
     <div class="container">
       <h2 class="mb-4">Skills Overview</h2>
       <div class="row justify-content-center">
@@ -160,4 +160,5 @@
 
 </body>
 </html>
+
 
