--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
   <!-- ===== ABOUT ===== -->
   <section id="about" class="container py-5 text-center">
   <h2 class="mb-3">About Me</h2>
-  <p class="mx-auto text-dark" style="max-width: 900px;">
+  <p class="mx-auto text-white" style="max-width: 900px;">
     Final-year BCA student at Jagannath Community College, Delhi, with strong hands-on experience in both front-end and back-end web development. Proficient in HTML5, CSS3, JavaScript, ASP.NET, and C#, with a passion for building clean, responsive, and scalable web applications. Skilled in working with relational databases such as SQL Server and MySQL, and adept at integrating cloud platforms like Salesforce and Heroku. Demonstrates a strong understanding of UI/UX design principles, accessibility standards, and mobile-first development. Continuously engaged in learning emerging technologies, contributing to real-world projects, and collaborating with peers to deliver impactful digital solutions.
   </p>
 </section>
 
   <!-- ===== SKILLS ===== -->
-  <section id="skills" class="py-5 bg-white text-center">
+  <section id="skills" class="py-5 bg-black text-center">
     <div class="container">
       <h2 class="mb-4">Skills Overview</h2>
       <div class="row justify-content-center">
@@ -131,7 +131,7 @@
   </section>
 
   <!-- ===== EXPERIENCE ===== -->
-  <section id="experience" class="py-5 bg-white text-center">
+  <section id="experience" class="py-5 bg-black text-center">
     <div class="container">
       <h2>Experience & Certifications</h2>
       <div class="mt-4">
@@ -160,6 +160,7 @@
 
 </body>
 </html>
+
 
 
 
